# Choros

./: .env.example  .gitignore  README.md  database.py  index.html
Choros/: FEATURE_SUMMARY.md  README.md  backend.py  package-lock.json  package.json  requirements.txt  tailwind.config.ts
Choros/src-tauri/: Cargo.toml  tauri.conf.json
Choros/src-tauri/src/: main.rs  models.rs
Choros/src/components/: AppSidebar.tsx
Choros/src/components/ui/: tooltip.tsx
Choros/src/contexts/: AuthContext.tsx
Choros/src/lib/: quotes.ts
Choros/src/pages/: AuthPage.tsx  NotesPage.tsx  SettingsPage.tsx
screenshots/: SCREENSHOTS.md  dashboard.png.txt  notes-editor.png.txt  planner.png.txt  settings.png.txt  tasks.png.txt
src/: App.tsx  index.css
src-tauri/src/: db.rs
src/components/: AppLayout.tsx
src/lib/: store.ts
src/pages/: ChangePasswordPage.tsx  DashboardPage.tsx  PlannerPage.tsx  ProfilePage.tsx  TasksPage.tsx
